<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_imp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/very_very_imp" />

    <Button
        android:id="@+id/btn_toll_free_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" android:layout_below="@+id/btn_imp"
        android:layout_marginTop="20sp"
        android:text="@string/toll_free_number" />
    <Button
        android:id="@+id/btn_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_toll_free_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/category" />

    <Button
        android:id="@+id/btn_call_your_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/enter_number_for_call" />

    <Button
        android:id="@+id/btn_add_your_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_call_your_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/add_your" />

    <Button
        android:id="@+id/btn_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_add_your_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/about_app_text" />

</RelativeLayout>