<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/about_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/info_about_app" />

    <TextView
        android:id="@+id/name_of_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_app_info"
        android:layout_centerHorizontal="true"
        android:text="@string/dharma_kshetri"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mobile_of_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_of_developer"
        android:layout_centerHorizontal="true"
        android:text="@string/dharma_mobile_number" />

    <TextView
        android:id="@+id/www_of_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile_of_developer"
        android:layout_centerHorizontal="true"
        android:text="@string/dharma_web_address" />

</RelativeLayout>