<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/top_call_your_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/text_top_call"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_type_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_call_your_number"
        android:layout_margin="40dp"
        android:hint="@string/hint_type_call"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_call_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_type_number"
        android:layout_centerHorizontal="true"
        android:text="@string/call" />

    <TextView
        android:id="@+id/bottom_text_in_call_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/add_your_number" />

</RelativeLayout>