<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:background="@color/npbappcolor" >

    <LinearLayout
        android:id="@+id/plateLinear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="30sp"
        android:background="@color/sky"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_name_of_representation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="Kist Medical Hospital"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address_of_representation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="Imadole- 6, Gwarko, Lalitpur"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="fill_parent"
            android:layout_height="2sp"
            android:layout_margin="5sp"
            android:background="@color/black" />

        <ScrollView
            android:id="@+id/scview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LPhone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/phone_no"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/LPhone1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/phone"
                        android:focusable="false"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/numbers_of_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:focusable="false"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LPhone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/phone"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/numbers_of_phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LPhone3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_phone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/phone"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/numbers_of_phone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LPhone4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_phone4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/phone"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/numbers_of_phone4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LPhone5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_phone5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/phone"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/numbers_of_phone5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:layout_margin="5sp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/mobile_number"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/LMobile1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_mobile1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/mobile"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/mobile_of_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LMobile2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_mobile2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/mobile"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/mobile_of_phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LMobile3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3sp"
                    android:onClick="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_of_mobile3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/mobile"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/mobile_of_phone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5sp"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divider3"
            android:layout_width="fill_parent"
            android:layout_height="2sp"
            android:layout_margin="5sp"
            android:background="@color/black" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/reladd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30sp" 
        android:background="@color/black"
        android:onClick="true" >

        <TextView
            android:id="@+id/add_your_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/add_your"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>